--- a/Experiments/madison/andriod_unit1_1_helloworld/AndroidExample/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/madison/andriod_unit1_1_helloworld/AndroidExample/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:context=".MainActivity"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:visibility="visible"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/main_msg_txt"
@@ -14,8 +14,17 @@
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="50dp"
-        android:textSize="50dp"
-        android:textColor="#000000" >
-    </TextView>
+        android:textColor="#000000"
+        android:textSize="50sp"></TextView>
+
+    <TextView
+        android:id="@+id/main_msg_subtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="75dp"
+        android:layout_marginBottom="100dp"
+        android:textColor="#0000FF"
+        android:textSize="20sp" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
