--- a/Experiments/madison/andriod_unit1_1_helloworld/AndroidExample/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/madison/andriod_unit1_1_helloworld/AndroidExample/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,14 @@
         android:textColor="#0000FF"
         android:textSize="20sp" />
 
+    <TextView
+        android:id="@+id/main_msg_endtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="#FF9800"
+        android:textSize="34sp" />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
