--- a/Experiments/madison/andriod_unit1_3_login_signup/AndroidExample/app/src/main/res/layout/activity_login.xml
+++ b/Experiments/madison/andriod_unit1_3_login_signup/AndroidExample/app/src/main/res/layout/activity_login.xml
@@ -10,13 +10,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login Example"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="150dp"
-        android:textSize="30dp"
-        android:textColor="#fc0303">
-    </TextView>
+        android:text="Login"
+        android:textColor="#03A9F4"
+        android:textSize="30dp"></TextView>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -28,10 +27,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="username: "
-            android:textSize="20dp"
-            android:textColor="#000000">
-        </TextView>
+            android:text="Username: "
+            android:textColor="#000000"
+            android:textSize="20dp"></TextView>
 
         <EditText
             android:id="@+id/login_username_edt"
@@ -51,10 +49,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="password: "
-            android:textSize="20dp"
-            android:textColor="#000000">
-        </TextView>
+            android:text="Password: "
+            android:textColor="#000000"
+            android:textSize="20dp"></TextView>
 
         <EditText
             android:id="@+id/login_password_edt"
