--- a/Experiments/madison/andriod_unit1_3_login_signup/AndroidExample/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/madison/andriod_unit1_3_login_signup/AndroidExample/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,12 @@
         android:id="@+id/main_msg_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home Page"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="50dp"
-        android:textSize="30dp"
-        android:textColor="#fc0303">
-    </TextView>
+        android:text="Home"
+        android:textColor="#03A9F4"
+        android:textSize="30dp"></TextView>
 
     <TextView
         android:id="@+id/main_username_txt"
@@ -51,6 +50,16 @@
         android:textSize="20sp"
         android:textColor="#ffffff">
     </Button>
+
+    <TextView
+        android:id="@+id/msg_txt2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="50dp"
+        android:text="Log in or sign up for free today!"
+        android:textColor="#F44336" />
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
