--- a/Experiments/madison/andriod_unit1_3_login_signup/AndroidExample/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/madison/andriod_unit1_3_login_signup/AndroidExample/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:context=".MainActivity"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:background="#A68BC34A"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/main_msg_txt"
@@ -22,13 +22,12 @@
         android:id="@+id/main_username_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="{{username}}"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="100dp"
-        android:textSize="30dp"
-        android:textColor="#000000">
-    </TextView>
+        android:text="{{username}}"
+        android:textColor="#000000"
+        android:textSize="30dp"></TextView>
 
 
     <Button
@@ -37,9 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Login"
-        android:textSize="20sp"
-        android:textColor="#ffffff">
-    </Button>
+        android:textColor="#ffffff"
+        android:textSize="20sp"></Button>
 
     <Button
         android:id="@+id/main_signup_btn"
@@ -47,9 +45,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Signup"
-        android:textSize="20sp"
-        android:textColor="#ffffff">
-    </Button>
+        android:textColor="#ffffff"
+        android:textSize="20sp"></Button>
 
     <TextView
         android:id="@+id/msg_txt2"
