--- a/Experiments/madison/andriod_unit1_3_login_signup/AndroidExample/app/src/main/res/layout/activity_signup.xml
+++ b/Experiments/madison/andriod_unit1_3_login_signup/AndroidExample/app/src/main/res/layout/activity_signup.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:context=".MainActivity"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:background="#A68BC34A"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,8 +35,7 @@
             android:id="@+id/signup_username_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:hint="Enter Username Here">
-        </EditText>
+            android:hint="Enter Username Here"></EditText>
 
     </LinearLayout>
 
@@ -56,10 +55,9 @@
         <EditText
             android:id="@+id/signup_password_edt"
             android:layout_width="wrap_content"
-            android:inputType="textPassword"
             android:layout_height="50dp"
-            android:hint="Enter Password Here">
-        </EditText>
+            android:hint="Enter Password Here"
+            android:inputType="textPassword"></EditText>
 
     </LinearLayout>
 
@@ -79,10 +77,9 @@
         <EditText
             android:id="@+id/signup_confirm_edt"
             android:layout_width="wrap_content"
-            android:inputType="textPassword"
             android:layout_height="70dp"
-            android:hint="Enter Password Here">
-        </EditText>
+            android:hint="Enter Password Here"
+            android:inputType="textPassword"></EditText>
 
     </LinearLayout>
 
@@ -99,9 +96,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="Login"
-            android:textSize="20sp"
-            android:textColor="#ffffff">
-        </Button>
+            android:textColor="#ffffff"
+            android:textSize="20sp"></Button>
 
         <Button
             android:id="@+id/signup_signup_btn"
@@ -109,9 +105,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="Signup"
-            android:textSize="20sp"
-            android:textColor="#ffffff">
-        </Button>
+            android:textColor="#ffffff"
+            android:textSize="20sp"></Button>
 
     </LinearLayout>
 
