--- a/Experiments/namin_frontend_experiemnts/android_unit1_2_intent/AndroidExample/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/namin_frontend_experiemnts/android_unit1_2_intent/AndroidExample/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,11 @@
         android:id="@+id/main_msg_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Intent Example"
         android:layout_gravity="center"
         android:layout_marginTop="200dp"
-        android:textSize="30dp"
-        android:textColor="#3F51B5">
-    </TextView>
+        android:text="Intent Example"
+        android:textColor="#3F51B5"
+        android:textSize="25dp"></TextView>
 
     <Button
         android:id="@+id/main_counter_btn"
