--- a/Experiments/madison/andriod_unit1_2_intent/AndroidExample/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/madison/andriod_unit1_2_intent/AndroidExample/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#6AF44336"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
