--- a/Experiments/madison/andriod_unit1_2_intent/AndroidExample/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/madison/andriod_unit1_2_intent/AndroidExample/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,5 +37,14 @@
         android:rotationX="36"
         android:textColor="#009688"
         android:textSize="24sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        app:srcCompat="@drawable/math" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
