--- a/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home"/>
+        android:icon="@drawable/baseline_calendar_month_24"
+        android:title="Reminders"
+        android:id="@+id/reminders"
+        />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard"/>
+        android:icon="@drawable/baseline_pets_24"
+        android:title="Home"
+        android:id="@+id/home"
+        />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications"/>
+        android:icon="@drawable/baseline_question_answer_24"
+        android:title="Questions"
+        android:id="@+id/questions"
+        />
 
 </menu>
