--- a/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/layout/fragment_admin_users.xml
+++ b/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/layout/fragment_admin_users.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_red"
-    tools:context=".QuestionsFragment">
+    tools:context=".AdminUsersFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Questions page!"
+        android:text="User managment!"
         android:textSize="40sp"
         android:textColor="@color/black"
         android:layout_gravity="center"/>
