--- a/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
+++ b/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_red"
-    tools:context=".RemindersFragment">
+    tools:context=".ClientHomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reminders Page!"
+        android:text="Home page!"
         android:textSize="40sp"
         android:textColor="@color/black"
         android:layout_gravity="center"/>
