Admin formats the postman json

--- a/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/menu/client_bottom_nav_menu.xml
+++ b/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/menu/client_bottom_nav_menu.xml
@@ -9,7 +9,7 @@
 
     <item
         android:icon="@drawable/baseline_pets_24"
-        android:title="Home"
+        android:title="Pets"
         android:id="@+id/home"
         />
 
