--- a/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/layout/fragment_admin_inventory.xml
+++ b/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/res/layout/fragment_admin_inventory.xml
@@ -23,7 +23,7 @@
             android:id="@+id/data_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:textSize="25sp"/>
 
     </LinearLayout>
 
