--- a/Experiments/madison/demo2/AndroidExample/app/src/main/res/layout/activity_login.xml
+++ b/Experiments/madison/demo2/AndroidExample/app/src/main/res/layout/activity_login.xml
@@ -4,18 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#9ABF0612"
+    android:hapticFeedbackEnabled="false"
     android:orientation="vertical"
-    tools:context=".SignupActivity">
+    tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
-        android:layout_marginBottom="80dp"
-        android:text="Signup"
+        android:layout_marginBottom="150dp"
+        android:text="Login"
         android:textColor="#030BF4"
-        android:textSize="30dp"></TextView>
+        android:textSize="30dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,13 +30,13 @@
             android:layout_height="wrap_content"
             android:text="Username: "
             android:textColor="#000000"
-            android:textSize="20dp"></TextView>
+            android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/signup_username_edt"
+            android:id="@+id/login_username_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:hint="Enter Email Here"></EditText>
+            android:hint="Enter Username Here" />
 
     </LinearLayout>
 
@@ -50,22 +51,16 @@
             android:layout_height="wrap_content"
             android:text="Password: "
             android:textColor="#000000"
-            android:textSize="20dp"></TextView>
+            android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/signup_password_edt"
+            android:id="@+id/login_password_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:hint="Enter Password Here"
-            android:inputType="textPassword"></EditText>
+            android:inputType="textPassword" />
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -75,22 +70,22 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/signup_login_btn"
+            android:id="@+id/login_login_btn"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="Login"
             android:textColor="#ffffff"
-            android:textSize="20sp"></Button>
+            android:textSize="20sp" />
 
         <Button
-            android:id="@+id/signup_signup_btn"
+            android:id="@+id/login_signup_btn"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="Signup"
             android:textColor="#ffffff"
-            android:textSize="20sp"></Button>
+            android:textSize="20sp" />
 
     </LinearLayout>
 
