--- a/Experiments/madison/demo2/AndroidExample/app/src/main/res/layout/activity_signup.xml
+++ b/Experiments/madison/demo2/AndroidExample/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#9ABF0612"
     android:orientation="vertical"
-    tools:context=".SignupActivity">
+    tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,7 +15,7 @@
         android:layout_marginBottom="80dp"
         android:text="Signup"
         android:textColor="#030BF4"
-        android:textSize="30dp"></TextView>
+        android:textSize="30dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,13 +29,13 @@
             android:layout_height="wrap_content"
             android:text="Username: "
             android:textColor="#000000"
-            android:textSize="20dp"></TextView>
+            android:textSize="20dp"/>
 
         <EditText
             android:id="@+id/signup_username_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:hint="Enter Email Here"></EditText>
+            android:hint="Enter Username Here"/>
 
     </LinearLayout>
 
@@ -50,14 +50,14 @@
             android:layout_height="wrap_content"
             android:text="Password: "
             android:textColor="#000000"
-            android:textSize="20dp"></TextView>
+            android:textSize="20dp"/>
 
         <EditText
             android:id="@+id/signup_password_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:hint="Enter Password Here"
-            android:inputType="textPassword"></EditText>
+            android:inputType="textPassword"/>
 
     </LinearLayout>
 
@@ -81,7 +81,7 @@
             android:layout_marginRight="10dp"
             android:text="Login"
             android:textColor="#ffffff"
-            android:textSize="20sp"></Button>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/signup_signup_btn"
@@ -90,7 +90,7 @@
             android:layout_marginLeft="10dp"
             android:text="Signup"
             android:textColor="#ffffff"
-            android:textSize="20sp"></Button>
+            android:textSize="20sp"/>
 
     </LinearLayout>
 
