--- a/Frontend/CyDropFrontend/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
             android:id="@+id/login_username_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:hint="Enter Username Here"></EditText>
+            android:hint="Enter Email Here"></EditText>
 
     </LinearLayout>
 
