--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
@@ -98,7 +98,7 @@
             app:layout_constraintTop_toBottomOf="@+id/petAge" />
 
         <Button
-            android:id="@+id/submitButton"
+            android:id="@+id/adminInventorySubmitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Submit"
