added put and delete implementations

--- a/Frontend/CyDropFrontend/app/src/main/res/layout/activity_signup.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/activity_signup.xml
@@ -94,5 +94,17 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/del_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete User" />
+
+    <Button
+        android:id="@+id/pass_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Password" />
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
