--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_admin_inventory.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_admin_inventory.xml
@@ -97,7 +97,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/adminInventoryAddButton"
+            android:id="@+id/deletePetButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add inventory item"
