editted and added chat pages, fixed return buttons

--- a/Frontend/CyDropFrontend/app/src/main/res/menu/client_bottom_nav_menu.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/menu/client_bottom_nav_menu.xml
@@ -14,9 +14,8 @@
         />
 
     <item
-        android:icon="@drawable/baseline_question_answer_24"
-        android:title="Questions"
         android:id="@+id/questions"
-        />
+        android:icon="@drawable/baseline_question_answer_24"
+        android:title="Chat" />
 
 </menu>
