--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_questions.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_questions.xml
@@ -7,12 +7,30 @@
     tools:context=".ClientQuestionsFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <Button
+        android:id="@+id/btn_vet_chat"
+        android:layout_width="match_parent"
+        android:layout_height="103dp"
+        android:layout_marginTop="103dp"
+        android:backgroundTint="@color/white"
+        android:text="Vet Chat"
+        android:textColor="@color/black" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Questions page!"
-        android:textSize="40sp"
+        android:layout_gravity="center"
+        android:text="Start a Chat!"
         android:textColor="@color/black"
-        android:layout_gravity="center"/>
+        android:textSize="40sp" />
+
+    <Button
+        android:id="@+id/btn_gbl_chat"
+        android:layout_width="match_parent"
+        android:layout_height="103dp"
+        android:backgroundTint="@color/white"
+        android:text="Global Chat"
+        android:textColor="@color/black" />
 
 </FrameLayout>
